--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "psqrt"
 ---
 
-This is a Quarto website.
+Sito di gabri (prova).
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
