--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,11 @@
 ---
-title: "psqrt"
+title: "Gabriele Midolo"
 ---
 
-Sito di gabri (prova).
+I am a researcher aiming to understand how species are organized in time and space, with major focus on plant and their functional trait variation across various scales. My research approaches mainly involve the use of large databases and quantitative syntheses exploring shared patterns across different biomes and species.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+In this website you can check my short [scientific CV](/cv.html), some R tools, and some of my drawings and paintings.
 
-```{r}
-1 + 1
-```
+<!-- ![I like insects. This is a sketch of *Plebejus argus*, my favourite butterfly.](imgs/butvec.svg){fig-align="center" width="191"} -->
+
+<!-- \ -->
