--- a/cv.qmd
+++ b/cv.qmd
@@ -22,6 +22,10 @@ title: "CV (in brief)"
 ### Main publications
 
 ::: {style="text-indent: -40px; padding-left: 40px;"}
+**Midolo, G.** (2024) Plant functional traits couple with range size and shape in European trees *Global Ecology and Biogeography, e13838*. <https://doi.org/10.1111/geb.13838>
+
+**Midolo, G.**, Axmanová, I., Divíšek, J., Dřevojan, P., Lososová, Z., Večeřa, M., ... & Chytrý, M. (2024). Diversity and distribution of Raunkiær's life forms in European vegetation. *Journal of Vegetation Science*, *35*(1), e13229. <https://doi.org/10.1111/jvs.13229>
+
 **Midolo, G.**, Mendez-Castro, F. & Ottaviani, G. (2023) Why studying the response of trait coordination to insularity matters? *Journal of Biogeography, 00, 1--9*. <https://doi.org/10.1111/JBI.14706>
 
 **Midolo, G.**, Herben, T., Axmanová, I., Marcenò, C., Pätsch, R., Bruelheide, H., ... & Chytrý, M. (2022). Disturbance indicator values for European plants. *Global Ecology and Biogeography*, *32*(1), 24-34. <https://doi.org/10.1111/geb.13603>
