--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ Welcome - and thanks for visiting!
 
 In this website you can check [my condensed CV](/cv.html) and [my data portfolio](/projects.html).
 
-I am currently a researcher interested in studying how species are organized in time and space, with a major focus on plants and their functional trait variation across various scales. My research primarily involves the use of large databases and quantitative syntheses to explore shared patterns across different biomes and species.
+My current work as researcher investigates the temporal and spatial organization of species, particularly plants, and their functional trait variation. I employ quantitative syntheses of large databases to uncover common patterns across a wide range of biomes and species.
 
 ![*Plebejus* (*Plebejus*) *argus* (Linnaeus, 1758) - Lycaenidae Polyommatinae Polyommatini\
 Drawing by G. Midolo](imgs/butvec.svg){style="text-align: center;" fig-align="center" width="191"}
