--- a/posts/intrpl_houseprince/intrpl_houseprice.qmd
+++ b/posts/intrpl_houseprince/intrpl_houseprice.qmd
@@ -12,7 +12,7 @@ categories:
 
 Time series data can often be gappy in space and time. Here, I illustrate a spatiotemporal machine learning (ML) interpolation exercise showing that it is possible to predict temporal changes at any point in time for a variable of interest from sparse geographic data (i.e., data without temporal replication at a site). This approach works when the variable of interest is spatially and temporally *autocorrelated* (Tobler, 1970), so that the *space-time cube* (Mahecha et al., 2020) can be filled using ML models trained on data with just one observation at each site that account for the complex interaction between space, time, and area (Keil & Chase, 2022).
 
-As an ecologist by training, we recently utilized this approach to study species richness dynamics (see also the work of [Keil & Chase, 2022](https://doi.org/10.32942/osf.io/rky7b). Here, I illustrate how this approach can be applied very well also in other contexts, such as the changes in prices of houses arranged across postal codes of the United States. Specifically, I utilized temporal time series of house prices across 26,318 zip addresses across the U.S. available from [Zillow Housing Data](https://www.zillow.com/research/data). I used smoothed, seasonally adjusted, Zillow Home Value Index (ZHVI) prices for all homes tipes (SFR and Condo/Co-op). The time serie cover 25 years, ranging from 31 December 2000 to 31 March 2025.
+As an ecologist by training, we recently utilized this approach to study species richness dynamics (see also the work of [Keil & Chase, 2022](https://doi.org/10.32942/osf.io/rky7b)). Here, I illustrate how this approach can be applied very well also in other contexts, such as the changes in prices of houses arranged across postal codes of the United States. Specifically, I utilized temporal time series of house prices across 26,318 zip addresses across the U.S. available from [Zillow Housing Data](https://www.zillow.com/research/data). I used smoothed, seasonally adjusted, Zillow Home Value Index (ZHVI) prices for all homes tipes (SFR and Condo/Co-op). The time serie cover 25 years, ranging from 31 December 2000 to 31 March 2025.
 
 ## 2. Data preparation
 
