re-render html pages

--- a/contact_me.qmd
+++ b/contact_me.qmd
@@ -7,11 +7,12 @@ page-layout: full
 
 Please feel free to reach out through any of the methods below
 
-### 📧 Email 
-[gabriele.midolo@gmail.com](mailto:gabriele.midolo@gmail.com)
+### 📧 Email
+
+[gabriele.midolo\@gmail.com](mailto:gabriele.midolo@gmail.com)
 
 ### 💬 Social Media
-- [LinkedIn](https://www.linkedin.com/in/gabriele-midolo-a49a99158)
-- [GitHub](https://github.com/gmidolo)
-- [Twitter](https://x.com/gabriele_midolo)
 
+-   [LinkedIn](https://www.linkedin.com/in/gabriele-midolo-a49a99158)
+-   [GitHub](https://github.com/gmidolo)
+-   [Twitter](https://x.com/gabriele_midolo)
