--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,10 @@
 ---
-title: "Gabriele Midolo"
+title: |
+  <div style="display: flex; align-items: center; justify-content: center;">
+    <img src="./imgs/profilepic.jpg" style="border-radius: 50%; width:170px; height:170px; object-fit: cover; margin-right: 15px;">
+    <span style="font-size: 1.3em;">Gabriele Midolo</span>
+  </div>
+format: html
 ---
 
 Welcome - and thanks for visiting!
