add 10.1111/ele.70248 paper

--- a/cv.qmd
+++ b/cv.qmd
@@ -147,9 +147,12 @@ my_map
 ### Lead Author Scientific Publications
 
 ::: {style="text-indent: -40px; padding-left: 40px;"}
-**Midolo, G.**, Skokanová, H., Clark, A. T., Vymazalová, M., Chytrý, M., Dullinger, S., ... & Keil, P. (2025) Nineteenth-century land use shapes the current occurrence of some plant species, but weakly affects the richness and total composition of Central European grasslands. *Landscape Ecology, 40*(1), 22. <https://doi.org/10.1007/s10980-024-02016-6>
 
-**Midolo, G.** (2024) Plant functional traits couple with range size and shape in European trees *Global Ecology and Biogeography, e13838*. <https://doi.org/10.1111/geb.13838>
+**Midolo, G.**, Clark, A. T., Chytrý, M., Essl, F., Dullinger, S., Jandt, U., ... & Keil, P. (2025). Six decades of losses and gains in alpha diversity of European plant communities. *Ecology Letters*, *28*(11), e70248. <https://doi.org/10.1111/ele.70248>
+
+**Midolo, G.**, Skokanová, H., Clark, A. T., Vymazalová, M., Chytrý, M., Dullinger, S., ... & Keil, P. (2025) Nineteenth-century land use shapes the current occurrence of some plant species, but weakly affects the richness and total composition of Central European grasslands. *Landscape Ecology*, *40*(1), 22. <https://doi.org/10.1007/s10980-024-02016-6>
+
+**Midolo, G.** (2024) Plant functional traits couple with range size and shape in European trees *Global Ecology and Biogeography*,  *33*(6), e13838. <https://doi.org/10.1111/geb.13838>
 
 **Midolo, G.**, Axmanová, I., Divíšek, J., Dřevojan, P., Lososová, Z., Večeřa, M., ... & Chytrý, M. (2024). Diversity and distribution of Raunkiær's life forms in European vegetation. *Journal of Vegetation Science*, *35*(1), e13229. <https://doi.org/10.1111/jvs.13229>
 
